2004-05-12  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Fix dump reading bugs.  Take into account key
	ordering options for output.

	* igprof-analyse: First complete version (except recursion).

	* IgProf.cc: Output counter counts.  Clean up output layout.

	* igprof, IgProfMem.cc: Counters now have counts as well as
	totals, no need for allocations counter any more.

	* igprof-analyse: First semi-functional version.

	* IgProfMem.cc, IgProfPerf.cc, IgProfFileDesc.cc: Remove
	cumulative counters, they are handled in the analyser.

2004-05-11  Lassi A. Tuura  <lat@iki.fi>

	* scripts/igprof, IgProf.cc, IgProfPerf.cc: Fixes for OS X.

2004-05-10  Lassi A. Tuura  <lat@iki.fi>

	* scripts/igprof-analyse: Preliminary analysis.

	* IgProfMem.cc, IgProfPerf.cc, IgProfFileDesc.cc (initialize):
	Make progress in the option string when unrecognised input is found.

	* scripts/igprof: Adapt to new profiler core.
	* scripts/igprof-analyse: New, analyse output files.

	* IgProf.h (IGPROF_LIBHOOK): New, for library-targeted hooks.
	* IgProf.cc: Use it to capture exit() from libc directly in
	non-dynamic programs such as "ls".
	* IgProfPerf.cc: Implement.
	* IgProfMem.cc: Remove unnecessary crud.

	* IgProf.h, IgProf.cc: Clean up internal static variable usage.
	Provide clean means to lock and unlock profiler core and activate
	or deactivate all enabled modules.  Use the facility in hooked
	functions.  Dump output in XML.  Dump symbol table separately
	from the trace.
	* IgProfFileDesc.cc: Use new profiler locking/activation scheme.
	* IgProfPerf.cc: Use new profiler locking/activation scheme.
	* IgProfMem.cc: Use new profiler locking/activation scheme.
	Automatically enable live counting if leak checking is turned on.

2004-05-07  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc (dumpTrace): Dump node address so leaks can be matched.

	* Preliminary version rewritten using IgHook.

2004-04-16  Giulio Eulisse  <giulio.eulisse@cern.ch>
