@@ -1,3 +1,8 @@
+2004-05-13  Lassi A. Tuura  <lat@iki.fi>
+
+	* IgProf.h, IgProf.cc (IGPROF_ASSERT, IGPROF_TRACE, panic): New
+	profiler tool debugging utilities.
+
 2004-05-12  Lassi A. Tuura  <lat@iki.fi>
 
 	* igprof-analyse: Fix dump reading bugs.  Take into account key
